--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,7 +36,39 @@ services:
     volumes:
       - ./api-document.yaml:/api/api-document.yaml:ro
     ports:
-      - 127.0.0.1:3000:8080
+      - 127.0.0.1:3030:8080
+
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    volumes:
+      - ./prometheus:/etc/prometheus/
+    ports:
+      - 127.0.0.1:9090:9090
+
+  exporter:
+    image: prom/node-exporter:latest
+    container_name: node-exporter
+    ports:
+      - 9100:9100
+#    restart: always
+
+  grafana:
+    image: grafana/grafana
+    container_name: grafana
+    ports:
+      - 3000:3000
+#    restart: always
+
+  alertmanager:
+    image: prom/alertmanager
+    container_name: alertmanager
+    volumes:
+      - ./alertmanager:/etc/alertmanager
+    command: "--config.file=/etc/alertmanager/config.yml"
+    ports:
+      - 9093:9093
+#    privileged: true
 
 volumes:
   db-data:
