--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -14,9 +14,24 @@ alerting:
         - targets:
             - alertmanager:9093
 
+#scrape_configs:
+#  - job_name: 'prometheus'
+#    static_configs:
+#      - targets:
+#          -  prometheus:9090
+#          -  node-exporter:9100
+#
+
 scrape_configs:
-  - job_name: 'prometheus'
+#  - job_name: 'prometheus'
+#    static_configs:
+#      - targets: ['prometheus:9090']
+  - job_name: 'node-exporter'
     static_configs:
-      - targets:
-          -  prometheus:9090
-          -  node-exporter:9100
+      - targets: ['node-exporter:9100']
+  - job_name: 'prom_mysql_exporter'
+    static_configs:
+      - targets: ['prom_mysql_exporter:9104']
+  - job_name: 'go-server'
+    static_configs:
+      - targets: [localhost:8080]
